cabal-version:      3.0
name:               mappable-transformers
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Lev135
maintainer:         lev_135@mail.ru

-- A copyright notice.
-- copyright:
category:           Control
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Control.Monad.Trans.Mappable
                      Control.Monad.State.Mappable
                      Control.Monad.Writer.Mappable
                      Control.Monad.Reader.Mappable
                      Control.Monad.Except.Mappable

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        PartialTypeSignatures
                        RankNTypes
                        TypeFamilies
                        UndecidableInstances
                        DefaultSignatures

    build-depends:    base ^>=4.14.3.0
                    , mtl >= 2.3
                    , transformers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable examples
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Reader
                      Except
                      State

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , mtl
                    , transformers
                    , mappable-transformers

    hs-source-dirs:   examples
    default-language: Haskell2010

test-suite mappable-transformers-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
