cabal-version:      3.0
name:               mappable-transformers
version:            0.1.0.0
synopsis:           
    Classes for mapping 'mtl' transformers
description:
    This package extends `mtl` type classes to make possible change 
    their type arguments without decomposing transformer

homepage:           https://github.com/Lev135/mappable-transformers
bug-reports:        https://github.com/Lev135/mappable-transformers/issues
license:            MIT
license-file:       LICENSE
author:             Lev135
maintainer:         Lev Dvorkin <lev_135@mail.ru>

copyright:          Lev Dvorkin (c) 2022
category:           Control
build-type:         Simple
extra-source-files: README.md
                    CHANGELOG.md

tested-with:        GHC == 8.10.7

source-repository head
    type:           git
    location:       https://github.com/Lev135/mappable-transformers.git

library
    exposed-modules:  Control.Monad.Trans.Mappable
                      Control.Monad.State.Mappable
                      Control.Monad.Writer.Mappable
                      Control.Monad.Reader.Mappable
                      Control.Monad.Except.Mappable

    default-extensions: FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        PartialTypeSignatures
                        RankNTypes
                        TypeFamilies
                        UndecidableInstances
                        DefaultSignatures

    build-depends:    base ^>=4.14.3.0
                    , mtl >= 2.2 && < 2.3
                    , transformers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable examples
    main-is:          Main.hs

    other-modules:    Reader
                      Except
                      State
                      Doc.Except
                      Doc.Reader
                      Doc.State
                      Doc.Writer

    build-depends:    base ^>=4.14.3.0
                    , mtl
                    , transformers
                    , mappable-transformers

    hs-source-dirs:   examples
    default-language: Haskell2010

test-suite mappable-transformers-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
